# MeowThink

./: Cargo.toml  LICENSE  README.md
src/: data.rs  eval.rs  exec.rs  lexer.rs  main.rs
src/parser/: expr.rs  ind.rs  mod.rs
testcases/: even.mtk  imp.mtk  nat.mtk  simple.mtk  struct.mtk  vector.mtk
tools/vscode/: package.json
tools/vscode/syntaxes/: meowthink.tmLanguage.json
