[package]
name = "MeowThink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
im = "15.0.0"
log = "0.4.14"
simplelog = { version = "^0.11.0", features = ["paris"] }
paw = "1.0.0"
structopt = { version="0.3.25", features=["paw"] }
thiserror = "1.0.30"
